# telegram-bot-template

./: README.md  pyproject.toml
.github/workflows/: auto-merge.yml  codeql.yml  docker-image.yml  linters.yml
bot/analytics/google/: client.py
bot/core/: loader.py
bot/middlewares/: __init__.py  i18n.py
