[tool.poetry]
name = "telegram-bot-template"
version = "2.3.2"
description = "Best way to create a scalable telegram bot with analytics"
homepage = "https://github.com/donBarbos/telegram-bot-template"
repository = "https://github.com/donBarbos/telegram-bot-template"
authors = ["donBarbos <donbarbos@proton.me>"]
license = "LGPL-v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.45"
pydantic = "^2.11.10"
pydantic-settings = "^2.12.0"

[tool.poetry.group.bot.dependencies]
aiogram = "^3.22.0"
asyncpg = "^0.31.0"
redis = "^7.1.0"
loguru = "^0.7.3"
sentry-sdk = {extras = ["loguru"], version = "^2.47.0"}
aiohttp = {extras = ["speedups"], version = "^3.12.15"}
uvloop = "^0.22.1"
babel = "^2.17.0"
cachetools = "^6.2.3"
orjson = "^3.11.5"
alembic = "^1.17.2"
prometheus-client = "^0.23.1"
greenlet = "^3.3.0"

[tool.poetry.group.admin.dependencies]
gunicorn = "^23.0.0"
flask = "^3.1.2"
flask-admin = "^2.0.2"
flask-security-too = "^5.7.1"
flask-caching = "^2.3.1"
flask-babel = "^4.0.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.11"
tablib = {extras = ["xlsx"], version = "^3.9.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.9"
mypy = "^1.19.0"
pre-commit = "^4.5.0"

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["D", "ANN101", "ANN102", "ANN401", "TD003", "FIX002", "COM812", "ISC001", "FBT001", "FBT002", "RUF", "ERA", "ARG005"]
cache-dir = "/tmp/ruff-cache/"
extend-exclude = ["logs", "configs", "migrations"]

[tool.ruff.lint.isort]
no-lines-before = ["future", "standard-library"]
known-local-folder = ["bot", "admin"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["ANN401", "S101", "S311"]

[tool.mypy]
python_version = "3.10"
files = "bot/*.py"
ignore_missing_imports = false
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
show_error_context = true
pretty = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
